# battleships

./: .gitignore
front/: index.html
server/: Cargo.toml
server/src/: game.rs  lib.rs  main.rs  ships.rs
