[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
futures-channel = "0.3.31"
tokio-tungstenite = "*"
futures-util = { version = "0.3.28", default-features = false, features = ["sink", "std"] }
tokio = { version = "1.0.0", default-features = false, features = ["io-util", "macros", "rt-multi-thread", "time"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.132"
queue = "0.3.1"

[dependencies.uuid]
version = "1.11.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
